# mem6_game

./: .gitignore  CHANGELOG.md  Cargo.toml  CodeFlow.md  CodeTour01.md  LICENSE  Makefile.toml  README.md  TODO.md  cache39.txt  codetour_start_route_template_render.md  rustfmt.toml  start_route_template_render_tour.md  temp39.txt
.tours/: start_route_template_render.tour
automation_tasks_rs/: .gitignore  Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/mem6/: all.html  fn.__wasm_bindgen_generated_run.html  fn.__wasm_bindgen_generated_wasm_bindgen_start.html  fn.get_url_and_hash.html  fn.run.html  fn.wasm_bindgen_start.html  index.html  sidebar-items.js
docs/mem6/ackmsgmod/: fn.prepare_for_ack_msg_waiting.html  fn.remove_ack_msg_from_queue.html  fn.send_ack.html  fn.send_msg_and_write_in_queue.html  index.html  sidebar-items.js
docs/mem6/divcardmonikermod/: fn.calc_font_size.html  fn.div_grid_card_moniker.html  index.html  sidebar-items.js
docs/mem6/divfordebuggingmod/: fn.div_for_debugging.html  index.html  sidebar-items.js
docs/mem6/divfullscreenmod/: fn.div_fullscreen.html  fn.is_fullscreen.html  index.html  sidebar-items.js
docs/mem6/divgametitlemod/: fn.div_game_title.html  index.html  sidebar-items.js
docs/mem6/divgridcontainermod/: constant.SRC_FOR_CARD_FACE_DOWN.html  fn.div_grid_container.html  fn.div_grid_item.html  fn.div_grid_items.html  fn.grid_height.html  fn.grid_width.html  fn.max_grid_size.html  fn.play_sound.html  fn.usize_window_inner_height.html  fn.usize_window_inner_width.html  fn.usize_window_inner_width_but_max_600.html  index.html  sidebar-items.js
docs/mem6/divnicknamemod/: fn.blink_or_not_nickname.html  fn.div_nickname_input.html  fn.group_id_onkeyup.html  fn.load_nickname.html  fn.nickname_onkeyup.html  fn.save_nickname_to_localstorage.html  index.html  sidebar-items.js
docs/mem6/divplayeractionsmod/: fn.div_player_actions_from_game_status.html  fn.div_unpredicted.html  index.html  sidebar-items.js
docs/mem6/divplayersandscoresmod/: index.html  sidebar-items.js  struct.PlayersAndScores.html
docs/mem6/divrulesanddescriptionmod/: constant.GAME_DESCRIPTION.html  constant.GAME_RULES1.html  constant.GAME_RULES2.html  fn.text_with_br_newline.html  index.html  sidebar-items.js  struct.RulesAndDescription.html
docs/mem6/fetchallimgsforcachemod/: fn.create_webrequest.html  fn.do_nothing.html  fn.fetch_all_img_for_cache_request.html  index.html  sidebar-items.js
docs/mem6/fetchgameconfigmod/: index.html  (+5 more)
docs/mem6_common/: all.html  constant._IMPL_DESERIALIZE_FOR_GameStatus.html  constant._IMPL_DESERIALIZE_FOR_MsgAckKind.html  constant._IMPL_DESERIALIZE_FOR_Player.html  constant._IMPL_DESERIALIZE_FOR_WsMessage.html  constant._IMPL_SERIALIZE_FOR_GameStatus.html  constant._IMPL_SERIALIZE_FOR_MsgAckKind.html  constant._IMPL_SERIALIZE_FOR_Player.html  constant._IMPL_SERIALIZE_FOR_WsMessage.html  enum.GameStatus.html  enum.MsgAckKind.html  enum.WsMessage.html  index.html  sidebar-items.js  struct.Player.html
docs/mem6_server/: all.html  fn.broadcast.html  fn.enable_ansi_support.html  fn.local_ip_get.html  fn.main.html  fn.receive_message.html  fn.send_to_other_players.html  fn.user_connected.html  fn.user_disconnected.html  index.html  sidebar-items.js  type.Users.html
dodrio_templating/: .auto_version_from_date.json  Cargo.toml  Makefile.toml  README.md
dodrio_templating/src/: htmltemplatemod.rs  lib.rs  routermod.rs  utilsmod.rs  websysmod.rs
first_hello/: Cargo.toml
mem6/: .auto_version_from_date.json  Cargo.toml  LICENSE  Makefile.toml  README.md  lmakeversionfromdate.json  rustfmt.toml
mem6/js/: javascriptdofullscreen.js  javascriptismobiledevice.js
mem6/src/: ack_msg_mod.rs  ackmsgmod.rs  div_grid_container_mod.rs  div_player_actions_mod.rs  divcardmonikermod.rs  divfordebuggingmod.rs  divfullscreenmod.rs  divgametitlemod.rs  divgridcontainermod.rs  divnicknamemod.rs  divplayeractionsmod.rs  divplayersandscoresmod.rs  divrulesanddescriptionmod.rs  fetch_mod.rs  fetchallimgsforcachemod.rs  fetchgameconfigmod.rs  fetchgamesmetadatamod.rs  fetchgmod.rs  fetchmod.rs  fncallermod.rs  game_data_mod.rs  gamedatamod.rs  html_template_impl_mod.rs  htmltemplateimplmod.rs  htmltemplatemod.rs  javascriptimportmod.rs  lib.rs  logmod.rs  page01nicknamemod.rs  page02groupmod.rs  page03gamemod.rs  page04instructionsmod.rs  page05errormod.rs  root_rendering_component_mod.rs  rootrenderingcomponentmod.rs  router_impl_mod.rs  routerimplmod.rs  routermod.rs  routersettingsmod.rs  sessionstoragemod.rs  (+42 more)
mem6_common/: .auto_version_from_date.json  Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
mem6_common/src/: lib.rs
mem6_server/: .auto_version_from_date.json  Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
mem6_server/other/main_panicks_on disconnect.rs/: main.rs
mem6_server/src/: main.rs
other/: x.html  x.json
rust_wasm_dodrio_templating/: Cargo.toml  Makefile.toml  README.md
rust_wasm_dodrio_templating/src/: htmltemplatemod.rs  lib.rs  routermod.rs  websysmod.rs
rust_wasm_router/: Cargo.toml  Makefile.toml  README.md
rust_wasm_router/src/: lib.rs  routermod.rs
rust_wasm_webrtc/: Cargo.toml  Makefile.toml  README.md
rust_wasm_webrtc/src/: lib.rs  webrtcmod.rs
rust_wasm_websocket/: Cargo.toml  Makefile.toml  README.md
rust_wasm_websocket/src/: lib.rs  websocketmod.rs
rust_wasm_websys_utils/: Cargo.toml  Makefile.toml  README.md
rust_wasm_websys_utils/src/: lib.rs  websysmod.rs
static_pages_for_graphic_design/: p01_start_page.htm  p01_start_page.html  p02_start_a_group.htm  p02_start_a_group.html  p03_join_a_group.html  p11_gameboard.htm  try.htm
webfolder/mem6/: index.html  manifest.json  p01_start.html  p02_start_a_group.html  p03_join_a_group.html  p04_wait_to_start.html  p05_choose_game.html  p06_drink.html  p07_do_not_drink.html  p08_instructions.html  p11_gameboard.html  p21_menu.html  p31_debug_text.html  p41_webrtc.html  script.js  service_worker.js  start_service_worker.js  testsvg.html
(+256 files in other folders)
