[package]
name = "dodrio_templating"
version = "2022.1004.1859"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "html templating for dodrio"
repository = "https://github.com/bestia-dev/dodrio_templating"
readme = "README.md"
license = "MIT"
keywords = ["wasm","dodrio","virtual dom"]
categories = ["game","learning"]
publish = false

[dependencies]
unwrap = "1.2.1"
dodrio = "0.2.0"
#dodrio =  { git = "https://github.com/fitzgen/dodrio", branch = "master" }
#dodrio = {path = "../../dodrio"}
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
#newer version of rand do not have smallring
rand = { version = "0.7.3", features = ["wasm-bindgen","small_rng"] }
js-sys = "0.3"
serde ="1.0.104"
#udep serde_derive = "1.0.104"
serde_json = "1.0"
#udep futures = "0.3.1"
# newer futures have unstable .await
wasm-bindgen-futures = "0.4.8"
#log = "0.4.8"
#udep strum = "0.17.1"
#udep strum_macros = "0.17.1"
#udep conv = "0.3.3"
#udep gloo-timers = {version="0.2.0", features=["futures"]}
reader_for_microxml = "1.0.4"

[dependencies.web-sys]
version = "0.3.33"
features = [
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "History",
  "HtmlAudioElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlMediaElement",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"