[package]
name = "mem6"
version = "2021.112.1454"
authors = ["bestia.dev"]
edition = "2018"
description = "Learning Rust Wasm/WebAssembly with Virtual Dom Dodrio"
repository = "https://github.com/bestia-dev/mem6_game"
readme = "README.md"
license = "MIT"
keywords = ["wasm","dodrio","virtual dom"]
categories = ["game","learning"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# dep from this workspace with path
mem6_common = { path = "../mem6_common" }
dodrio_templating = { path = "../dodrio_templating" }

# dep to my lib from crates.io
qrcode53bytes ="1.1.0"
# later versions of reader_for_microxml have breaking changes
reader_for_microxml = "1.0.4"

wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.19"
js-sys = "0.3"
unwrap = "1.2.1"
dodrio = "0.2.0"
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2.1", features = ["js"]}
rand = { version = "0.8.1", features = ["small_rng"] }
serde ="1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0"
strum = "0.20.0"
strum_macros = "0.20.1"
conv = "0.3.3"
gloo-timers = {version="0.2.1", features=["futures"]}

# temporary debugging dependencies
#qrcode53bytes = { path = "../../qrcode53bytes" }
#dodrio =  { git = "https://github.com/fitzgen/dodrio", branch = "master" }
#dodrio = {path = "../../dodrio"}
#log = "0.4.8"
#udep mopa = "0.2.2"
#udep futures = "0.3.1"

[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "History",
  "HtmlElement",
  "HtmlFontElement",
  "HtmlFormElement",
  "HtmlHtmlElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "HtmlSpanElement",
  "KeyboardEvent",
  "Location",
  "MediaQueryList",
  "MouseEvent",
  "Navigator",
  "Node",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Screen",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[profile.release]
panic = "abort"
