[package]
name = "mem6_common"
version = "2022.1005.1100" #no need for semver if it is not a library
description = "commons for mem6 wasm and server"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/mem6_game"
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["web-programming::http-server"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
serde = "1.0.104"
serde_derive = "1.0.104"
strum_macros = "0.17.1"