[package]
name = "mem6_server"
version = "2020.106.1612" #no need for semver if it is not a library
description = "server for the game mem6 http + WebSocket on the same port"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/mem6_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]

[dependencies]
mem6_common = { path = "../mem6_common" }
futures = "0.3.1"
log = "0.4.8"
env_logger = "0.7.1"
warp =  { git = "https://github.com/seanmonstar/warp.git", branch = "master" }
#warp="0.1.20"
regex="1.3.1"
# cmd line input parameters
clap ="2.33.0"
# colorful output to screen
ansi_term = "0.12.1"
serde = "1.0.104"
serde_derive ="1.0.104"
serde_json = "1.0"
unwrap = "1.2.1"
tokio = { version = "0.2", features = ["blocking", "fs", "macros", "rt-threaded", "stream", "sync", "time"] }
