[package]
name = "mem6_server"
version = "2020.1228.1953" #no need for semver if it is not a library
description = "server for the game mem6 http + WebSocket on the same port"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/mem6_game"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "http", "websocket"]
publish = false

[dependencies]
mem6_common = { path = "../mem6_common" }
futures = "0.1"
log = "0.4.8"
env_logger = "0.7.1"
warp="0.1.20"
regex="1.5.5"

# cmd line input parameters
clap ="2.33.0"
# colorful output to screen
ansi_term = "0.12.1"
serde = "1.0.101"
serde_derive ="1.0.101"
serde_json = "1.0"
unwrap = "1.2.1"
